[tool.poetry]
name = "lxd-python"
version = "0.1.0"
description = ""
authors = ["Joakim Hellsén <tlovinator@gmail.com>"]
readme = "README.md"
packages = [{ include = "lxd_python" }]

[tool.poetry.dependencies]
python = "^3.10"
httpx = "^0.23.3"
loguru = "^0.6.0"
cryptography = "^39.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
pytest-random-order = "^1.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
